pdf aaa